fixes wrapping issue with helptext

--- a/app/assets/stylesheets/style.sass
+++ b/app/assets/stylesheets/style.sass
@@ -1024,6 +1024,7 @@ thead
   $activeColor: $orange
   position: relative
   display: inline-block
+  white-space: normal
   &.right-edge
     .explanation
       left: auto
